--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,10 @@
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
+# Folders
+bin
+obj
+
 # Build results
 [Dd]ebug/
 [Dd]ebugPublic/
